Update: Fix overflowx

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
 
 }
 
+
+html {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--mainColor);
 min-height: 900px;
